# vectoria

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  compose.prod.yaml  compose.yaml  config.py  deploy.sh  docker-compose.yml  main.py  pyproject.toml
api/: auth.py  deps.py  errors.py  image_stream.py  image_utils.py  middleware.py  mime_sniff.py  pdf_inspect.py  pptx_inspect.py  rate_limit.py  schemas.py  url_validation.py
api/routes/: analyze.py  debug.py  documents.py  health.py  images.py  knowledgebase.py  query.py
db/: base.py  helpers.py  models.py
db/migrations/: env.py
db/migrations/versions/: 0034d96e823e_add_document_images_table_and_update_.py  005bc745cf1b_update_documents_status_default_to_.py  2966bee2ab70_add_storage_key_to_documents.py  37fbc0fa6104_add_status_and_error_msg_to_documents.py  704e8abb54e2_initial.py  82ff677b19b3_add_server_defaults_and_rename_engine_.py  a1b2c3d4e5f6_add_file_hash_to_documents.py  a7b8c9d0e1f2_trigram_hnsw_indexes.py  b2c3d4e5f6a7_add_tasks_table.py  b8c9d0e1f2a3_drop_legacy_tsvector.py  c3d4e5f6a7b8_create_chunks_table.py  c9d0e1f2a3b4_add_error_type_trace_to_documents.py  d0e1f2a3b4c5_add_page_to_document_images.py  d4e5f6a7b8c9_add_image_status_to_documents.py  d7cc8faf7297_add_content_column_to_documents.py  e1f2a3b4c5d6_add_page_count_to_documents.py  e53807e0235a_add_index_status_to_documents.py  e5f6a7b8c9d0_add_phash_to_document_images.py  f6a7b8c9d0e1_add_file_hash_sha256.py
docs/: API.md
eval/: README.md  dataset.yaml  run.py
eval/reports/: baseline-2026-04-22.json  retrieve-only-2026-04-22.json
infra/: circuit_breaker.py  metrics.py  proc.py  ratelimit.py
monitoring/: README.md  alert_relay.py  alertmanager.yml  compose.monitoring.yaml  digest.py  grafana-dashboard.json  prometheus-rules.yaml  prometheus.yaml  send_digest.py
monitoring/grafana/dashboards/: badcases.json  vectoria.json
monitoring/grafana/provisioning/dashboards/: provider.yaml
monitoring/grafana/provisioning/datasources/: postgres.yaml
parsers/: __init__.py  _pptx_images.py  base.py  convert.py  docling_parser.py  docx_parser.py  docx_repair.py  image_extractor.py  image_metadata.py  image_ref.py  isolation.py  markitdown_parser.py  mineru_parser.py  ocr_parser.py  outline.py  paddle_parser.py  pdfium_parser.py  pptx_parser.py  registry.py  url_parser.py  vision_parser.py  xlsx_parser.py
parsers/url/: __init__.py  _baike.py  _blacklist.py  _block_cooldown.py  _browser.py  _feishu.py  _fetch.py  _generic.py  _handlers.py  _http.py  _wechat.py  _x.py  _xhs.py
rag/: embedder.py  fusion.py  pipeline.py
rag/steps/: base.py  expand.py  fusion.py  generate.py  query_rewrite.py  rerank.py  retrieve.py
scripts/: build-push.sh  cron-digest.sh  cron-retry-dead-docs.sh  deploy-host.sh  deploy.sh  dev.sh  send_daily_digest.py
splitter/: splitter.py
storage/: __init__.py  base.py  s3.py
store/: pgvector.py
tests/: conftest.py  test_config_indexing.py  test_models_index_status.py
tests/test_api/: test_analyze.py  test_app_error.py  test_auth.py  test_documents_index_status.py  test_health.py  test_image_phash.py  test_image_stream.py  test_images.py  test_ingest_atomicity.py  test_ingest_concurrency.py  test_ingest_language.py  test_ingest_size_limit.py  test_ingest_text.py  test_ingest_wait.py  test_knowledgebase.py  test_middleware.py  test_page_count.py  test_pdf_inspect.py  test_pptx_inspect.py  test_query.py  test_query_indexing_disabled.py  test_rate_limit.py  test_schema_validation.py  test_upload_limits_and_dedup.py  test_upload_mime.py  test_upload_pdf_pages.py  test_upload_pptx_slides.py  test_url_validation.py
tests/test_infra/: test_circuit_breaker.py  test_metrics.py  test_proc.py  test_ratelimit.py
tests/test_monitoring/: test_alert_relay.py  test_digest.py  test_digest_markers.py
tests/test_parsers/: _isolation_fixtures.py  test_block_cooldown.py  test_docling_parser.py  test_docx_parser.py  test_docx_repair.py  test_fetch_impersonated.py  test_http_capped.py  test_image_extractor.py  test_image_metadata.py  test_image_metadata_refs.py  test_image_ref.py  test_isolation.py  test_markitdown_parser.py  test_mineru_breaker.py  test_mineru_parser.py  test_no_raw_httpx_clients.py  test_ocr_parser.py  test_outline.py  test_paddle_parser.py  test_page_pacing.py  test_parser_factory_pickle_contract.py  test_pdfium_parser.py  test_pptx_images.py  test_pptx_parser.py  test_registry.py  test_url_baike.py  test_url_blacklist.py  test_url_block_detect.py  test_url_browser.py  test_url_canonicalize.py  test_url_cooldown_wiring.py  test_url_download_images.py  test_url_feishu.py  test_url_fetch.py  test_url_generic.py  test_url_handlers.py  test_url_init.py  test_url_parser.py  test_url_wechat.py  test_url_x.py  (+3 more)
tests/test_parsers/fixtures/: baike_spider.html
tests/test_rag/: test_embedder.py  test_fusion.py  test_pipeline.py
tests/test_splitter/: test_splitter.py
tests/test_storage/: test_s3.py
tests/test_vision/: test_client.py  test_client_prompt.py  test_language.py
tests/test_worker/: test_handlers_doc_missing.py  test_indexing_toggle.py  test_language_threading.py  test_parse_document.py  test_parse_page_count.py  test_queue_and_runner.py  test_reap_dead_tasks.py  test_retry_dead_docs.py  test_runner_rss_and_queues.py  test_sample_queue_metrics.py
vectorstore/: base.py  pgvector.py
vision/: budget.py  client.py  language.py
worker/: __main__.py  handlers.py  queue.py  retry_dead_docs.py  runner.py
