[project]
name = "vectoria"
version = "0.1.0"
description = "A lightweight RAG backend service with hybrid search, document ingestion, and knowledge base management"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.0",
    "docling>=2.0",
    "trafilatura>=2.0",
    "openai>=1.0",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "rank-bm25>=0.2",
    "tiktoken>=0.7",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0",
    "markitdown>=0.1",
    "playwright>=1.58.0",
    "torch>=2.0",        # explicit: force CPU-only build via [tool.uv.sources]
    "torchvision>=0.15", # explicit: force CPU-only build via [tool.uv.sources]
    "aioboto3>=13.0",
    "pyjwt>=2.8",
    "prometheus-client>=0.20",
    "prometheus-fastapi-instrumentator>=7.0",
    "redis[hiredis]>=5.0",
    # ``coredis`` is what ``limits.aio.storage.RedisStorage`` speaks
    # (not the sync ``redis`` package). Without it the async limiter
    # raises ConfigurationError at first acquire(). The sync ``redis``
    # is still pulled for any future code that touches Redis directly
    # outside the limiter.
    # Upper bound at 6.0 — coredis 6.x requires callers to use an
    # ``async with`` context manager on the connection pool, but the
    # ``limits`` library (as of 5.8) still instantiates the client
    # bare. Using coredis 6 yields "Connection pool is not initialized"
    # on every acquire. Drop the upper bound once ``limits`` updates
    # (tracked upstream).
    "coredis>=4.17,<6",
    "limits>=3.7",
    "imagehash>=4.3",
    # python-pptx is declared explicitly (not just via docling transitive)
    # so the PptxImageExtractor plugin keeps working if docling is ever
    # retired. 1.0+ stabilised the slide.notes_slide API we rely on.
    "python-pptx>=1.0",
    # .docx native parsing: mammoth outputs markdown with heading /
    # list / table structure; python-docx exposes the inline-image
    # blobs for the image_refs pipeline.
    "mammoth>=1.8",
    "python-docx>=1.0",
]

[project.optional-dependencies]
ocr    = ["paddleocr>=2.10", "paddlepaddle>=3.0"]
chroma = ["chromadb>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" }
]
torchvision = [
  { index = "pytorch-cpu" }
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-mock>=3.12",
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
