[project]
name = "vectoria"
version = "0.1.0"
description = "A lightweight RAG backend service with hybrid search, document ingestion, and knowledge base management"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.0",
    "trafilatura>=2.0",
    "openai>=1.0",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "rank-bm25>=0.2",
    "tiktoken>=0.7",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0",
    "markitdown>=0.1",
    "playwright>=1.58.0",
    "aioboto3>=13.0",
    "pyjwt>=2.8",
    "prometheus-client>=0.20",
    "prometheus-fastapi-instrumentator>=7.0",
    "redis[hiredis]>=5.0",
    # ``coredis`` is what ``limits.aio.storage.RedisStorage`` speaks
    # (not the sync ``redis`` package). Without it the async limiter
    # raises ConfigurationError at first acquire(). The sync ``redis``
    # is still pulled for any future code that touches Redis directly
    # outside the limiter.
    # Upper bound at 6.0 — coredis 6.x requires callers to use an
    # ``async with`` context manager on the connection pool, but the
    # ``limits`` library (as of 5.8) still instantiates the client
    # bare. Using coredis 6 yields "Connection pool is not initialized"
    # on every acquire. Drop the upper bound once ``limits`` updates
    # (tracked upstream).
    "coredis>=4.17,<6",
    "limits>=3.7",
    "imagehash>=4.3",
    # python-pptx is declared explicitly (not just via docling transitive)
    # so the PptxImageExtractor plugin keeps working if docling is ever
    # retired. 1.0+ stabilised the slide.notes_slide API we rely on.
    "python-pptx>=1.0",
    # .docx native parsing: mammoth outputs markdown with heading /
    # list / table structure; python-docx exposes the inline-image
    # blobs for the image_refs pipeline.
    "mammoth>=1.8",
    "python-docx>=1.0",
    # .xlsx native parsing: openpyxl in read-only + data-only mode
    # bounds memory on multi-sheet workbooks and resolves cached
    # formula values instead of emitting raw ``=SUM(...)`` strings.
    "openpyxl>=3.1",
    # PDF fallback path when MinerU is unavailable — pure PDFium via
    # pypdfium2. Replaces docling's PDF fallback with ~5 MB of C
    # extension instead of ~400 MB of torch/transformers models.
    "pypdfium2>=4.30",
    # Image OCR (.png/.jpg/.jpeg/.tiff/.bmp). ONNX-runtime based,
    # CJK+English, ~150 MB of on-disk models. Replaces docling's OCR
    # path. ``onnxruntime`` is a transitive dep; declaring it
    # explicitly guards against rapidocr bumping its constraint in a
    # way that lets the wrong runtime wheel win.
    "rapidocr>=2.0",
    "onnxruntime>=1.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]


[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-mock>=3.12",
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
